--- a/src/Components/Admin-Section/Approval/LeavePolicies.css
+++ b/src/Components/Admin-Section/Approval/LeavePolicies.css
@@ -5,20 +5,30 @@
   min-height: 100vh;
 }
 
-.leave-policies-layout .topbar {    /* new */
-     padding-top: 13px !important;    /* modified */
-   padding-bottom: 13px !important;   /* modified */
-  margin-top: -1px !important;           /* modified */
-  margin-left: -6px !important;         /* modified */
-  margin-bottom: 50px !important;   /* new */
+.leave-policies-layout .topbar {
+  /* new */
+  padding-top: 13px !important;
+  /* modified */
+  padding-bottom: 13px !important;
+  /* modified */
+  margin-top: -1px !important;
+  /* modified */
+  margin-left: -6px !important;
+  /* modified */
+  margin-bottom: 50px !important;
+  /* new */
   padding-bottom: 8px;
-  width: 100% ;            /* modified */
+  width: 100%;
+  /* modified */
   display: block;
 }
 
 .leave-policies-main {
   flex: 1;
   padding: 20px 30px;
+  padding-left: 280px;
+  /* modified: fix sidebar overlap */
+  padding-top: 100px;
 }
 
 /* ===== Header Section ===== */
@@ -139,7 +149,8 @@
 .leave-policies-modal-header {
   background: #19bde8;
   color: #fff;
-  padding: 7px 18px;        /* modified */
+  padding: 7px 18px;
+  /* modified */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -147,15 +158,18 @@
 
 .leave-policies-modal-title {
   margin: 0;
-  font-size: 17px;      /* modified */
-  font-weight: 600;     /* modified */
+  font-size: 17px;
+  /* modified */
+  font-weight: 600;
+  /* modified */
 }
 
 .leave-policies-close-btn {
   background: none;
   border: none;
   color: #fff;
-  font-size: 30px ;    /* modified */
+  font-size: 30px;
+  /* modified */
   cursor: pointer;
   padding: 0;
   width: 30px;
@@ -192,7 +206,8 @@
 .leave-policies-field label {
   font-size: 14px;
   font-weight: 500;
-  color: #030303;    /* modified */
+  color: #030303;
+  /* modified */
 }
 
 /* ===== Inputs & Selects ===== */
