--- a/src/Components/Admin-Section/leave/MyHoliday.css
+++ b/src/Components/Admin-Section/leave/MyHoliday.css
@@ -3,8 +3,12 @@
   background-color: #eff5ff;
   padding: 20px 30px;
   min-height: 100vh;
-  overflow-y: auto;      /* page content scrolls here */
+  overflow-y: auto;
+  /* page content scrolls here */
   overflow-x: hidden;
+  padding-left: 280px !important;
+  /* modified: fix sidebar overlap */
+  padding-top: 100px !important;
 }
 
 .page-title {
@@ -19,7 +23,7 @@
   background: #fff;
   border-radius: 1px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
-  height:505px;
+  height: 505px;
 }
 
 .holiday-table {
@@ -38,7 +42,7 @@
   font-size: 14px;
   color: #444;
   border-bottom: 1px solid #ddd;
-  height:55px;
+  height: 55px;
 }
 
 .holiday-table td {
@@ -47,7 +51,7 @@
   font-size: 14px;
   color: #333;
   border-bottom: 1px dashed #ddd;
-  height:64.4px;
+  height: 64.4px;
 }
 
 /* Pagination */
@@ -70,8 +74,8 @@
   padding: 4px 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
-   background: #19bde8;
-   color:white;
+  background: #19bde8;
+  color: white;
 }
 
 .page-controls {
